[package]
name = "xiuXianAfter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web框架
actix-web = "4"
#日志框架
log = "0.4" # 没有实际功能
#pretty_env_logger = "0.4"
log4rs = "1.0.0-alpha-2"    # 这个有实际功能
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64" #序列化和反序列化json

sqlx={version="0.6.3",features=["postgres","runtime-tokio-rustls","macros","chrono","uuid"]}
sqlb = "0.0.8"
#MD5
rust-crypto = "0.2.36"
uuid = { version = "1.3.0", features = ["v4","serde"]}
#此工具会加载文件中的配置信息，还会加载windows操作系统中的环境变量信息，如 JAVA_HOME 等
dotenv="0.15.0"
#日期和时间工具类
chrono={version="0.4.19",features=["serde"]}
#jwt 需要和serd一起使用
jsonwebtoken = "8"
#读取yaml
serde_yaml = "0.8"
# 初始化工具
lazy_static = "1.4.0"